feat(unit-test): added unit tests
