# src/controllers/todos/getTodoById.ts
@@ -7,6 +7,11 @@ interface IGetTodoByIdParams {
 
 export const getTodoById = (request: FastifyRequest, reply: FastifyReply) => {
   const todoId = (request.params as IGetTodoByIdParams)?.todoId;
-  const result = db.todo.find((todo) => todo.id === todoId) ?? {};
+  const result = db.todo.find((todo) => todo.id === todoId);
+
+  if (!result) {
+    reply.status(404).send({ message: 'Todo not found' });
+    return;
+  }
   reply.send(result);
 };
